[gd_scene load_steps=16 format=2]

[ext_resource path="res://bodies/player/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/gamepad/button_gamepad3.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/button1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/gamepad/button_gamepad2.png" type="Texture" id=4]
[ext_resource path="res://assets/images/ui/gamepad/button_gamepad1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/gamepad/button_gamepad0.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/button2.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/gamepad/button_gamepad4.png" type="Texture" id=8]
[ext_resource path="res://assets/images/ui/gamepad/button_gamepad6.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/gamepad/button_gamepad5.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/DigitalDisco.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/fonts/DigitalDiscoThin.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
mouse_filter = 2
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deads" type="Label" parent="HBoxContainer"]
margin_left = 120.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.960784, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Deaths: 0"

[node name="level" type="Label" parent="HBoxContainer"]
margin_left = 204.0
margin_top = 8.0
margin_right = 246.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.960784, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Level: "

[node name="coins" type="Label" parent="HBoxContainer"]
margin_left = 266.0
margin_top = 8.0
margin_right = 311.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.960784, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Coins: "

[node name="saves" type="Label" parent="HBoxContainer"]
margin_left = 331.0
margin_top = 8.0
margin_right = 391.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.984314, 0.960784, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Saves: 0"

[node name="right" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 112, 192 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 6 )
pressed = ExtResource( 5 )
passby_press = true
action = "right"
visibility_mode = 1

[node name="left" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 96, 192 )
scale = Vector2( -1.5, 1.5 )
normal = ExtResource( 6 )
pressed = ExtResource( 5 )
passby_press = true
action = "left"
visibility_mode = 1

[node name="jump" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 416, 192 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 2 )
passby_press = true
action = "jump"
visibility_mode = 1

[node name="save_pos" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 64, 8 )
normal = ExtResource( 10 )
passby_press = true
action = "save_position"
visibility_mode = 1

[node name="camera" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 8, 8 )
normal = ExtResource( 8 )
passby_press = true
action = "change_camera"
visibility_mode = 1

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 48.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.956863, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Your position has been saved"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]

[node name="pause" type="TextureButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 448.0
margin_top = 8.0
margin_right = 496.0
margin_bottom = 56.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Label" type="Label" parent="Popup/CenterContainer"]
margin_top = 102.0
margin_right = 512.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.956863, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "PAUSE"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/CenterContainer"]
margin_top = 138.0
margin_right = 512.0
margin_bottom = 186.0
alignment = 1

[node name="resume" type="TextureButton" parent="Popup/CenterContainer/HBoxContainer"]
margin_left = 26.0
margin_right = 138.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
stretch_mode = 5

[node name="Label2" type="Label" parent="Popup/CenterContainer/HBoxContainer/resume"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.956863, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="TextureButton" parent="Popup/CenterContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 254.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
stretch_mode = 5

[node name="Label2" type="Label" parent="Popup/CenterContainer/HBoxContainer/restart"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.956863, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Restart"
align = 1
valign = 1

[node name="menu" type="TextureButton" parent="Popup/CenterContainer/HBoxContainer"]
margin_left = 258.0
margin_right = 370.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
stretch_mode = 5

[node name="Label2" type="Label" parent="Popup/CenterContainer/HBoxContainer/menu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.956863, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Menu"
align = 1
valign = 1

[node name="exit" type="TextureButton" parent="Popup/CenterContainer/HBoxContainer"]
margin_left = 374.0
margin_right = 486.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
stretch_mode = 5

[node name="Label2" type="Label" parent="Popup/CenterContainer/HBoxContainer/exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.984314, 0.956863, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0.286275, 0.301961, 0.494118, 1 )
text = "Exit"
align = 1
valign = 1
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_up" from="pause" to="." method="_on_pause_button_up"]
[connection signal="button_up" from="Popup/CenterContainer/HBoxContainer/resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="Popup/CenterContainer/HBoxContainer/restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="Popup/CenterContainer/HBoxContainer/menu" to="." method="_on_menu_button_up"]
[connection signal="button_up" from="Popup/CenterContainer/HBoxContainer/exit" to="." method="_on_exit_button_up"]
